tests/baselines/reference/invalidUndefinedValues.errors.txt
invalidUndefinedValues.ts(19,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== invalidUndefinedValues.ts (1 errors) ====
    var x: typeof undefined;
    
    x = 1;
    x = '';
    x = true;
    var a: void;
    x = a;
    x = null;
    
    class C { foo: string }
    var b: C;
    x = C;
    x = b;
    
    interface I { foo: string }
    var c: I;
    x = c;
    
    module M { export var x = 1; }
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    x = M;
    
    x = { f() { } }
    
    function f<T>(a: T) {
        x = a;
    }
    x = f;
    
    enum E { A }
    x = E;
    x = E.A;